client/src/app/recipes/recipes-grid/recipes-grid.component.css
.grid-container {
  margin: 20px;
}

.mat-h1 {
  text-transform: capitalize;
  padding: 16px;
}

.dashboard-card {
  position: absolute;
  top: 15px;
  left: 15px;
  right: 15px;
  bottom: 15px;
}

.more-button {
  position: absolute;
  top: 5px;
  right: 10px;
}

.dashboard-card-content {
  text-align: center;
}

.recipe-header-image {
  background-size: cover;
  background-clip: border-box;
}

.mat-grid-list {
  display: block;
  position: relative;
  max-width: 1200px;
  margin: 0 auto;
}

mat-card-title {
  text-transform: capitalize;
  font-size: 16px;
  color: rgba(0, 0, 0, 0.87);
}
.truncate{
  display: block;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}
/*.truncate {*/
  /*width: 250px;*/
  /*white-space: nowrap;*/
  /*overflow: hidden;*/
  /*text-overflow: ellipsis;*/
/*}*/

mat-card-subtitle {
  text-transform: capitalize;
  font-style: italic;
}
mat-card-subtitle p {
  text-transform: capitalize;
}

mat-card-content a {
  color: rgba(0, 0, 0, 0.54);
}

[mat-card-image] {
  /*max-height: 50%;*/
}

a {
  text-decoration: none;
  color: rgba(0, 0, 0, 0.87);
}

/*Favorite button overlay*/

.favorite-button {
  position: absolute;
  z-index: 90000;
  right: 0;
  top: 0;
  width: 50px;
  height: 50px;
  overflow: auto;
}

